projects/baseline/linkerd/prometheus-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: linkerd-prometheus
  namespace: linkerd
  annotations:
    kubernetes.io/ingress.class: nginx-internal
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: prometheus-scraper
      http:
        paths:
          - path: /
            backend:
              serviceName: linkerd-prometheus
              servicePort: 9090
